changes the default settings for postgres connection pool

--- a/thalemine/default.intermine.integrate.properties
+++ b/thalemine/default.intermine.integrate.properties
@@ -14,12 +14,10 @@ os.production.noNotXml=true
 os.production.logTable=executelog
 os.production.minBagTableSize=1100
 
-db.production.datasource.class=org.postgresql.ds.PGPoolingDataSource
+#db.production.datasource.class=org.postgresql.ds.PGPoolingDataSource
+db.production.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.production.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.production.datasource.dataSourceName=db.production
-#db.production.datasource.serverName=server_name
-#db.production.datasource.databaseName=db_name
-#db.production.datasource.user=user
-#db.production.datasource.password=password
 db.production.datasource.maxConnections=50
 db.production.driver=org.postgresql.Driver
 db.production.platform=PostgreSQL
@@ -38,13 +36,15 @@ integration.production.datatrackerCommitSize=50000
 
 # global target (tgt) items objectstore
 
-db.common-tgt-items.datasource.class=org.postgresql.ds.PGPoolingDataSource
-db.common-tgt-items.datasource.dataSourceName=db.common-tgt-items
 #properties to set in $HOME/.intermine/thalemine.properties or similar:
 # db.common-tgt-items.datasource.serverName=server_name
 # db.common-tgt-items.datasource.databaseName=db_name
 # db.common-tgt-items.datasource.user=user
 # db.common-tgt-items.datasource.password=password
+#db.common-tgt-items.datasource.class=org.postgresql.ds.PGPoolingDataSource
+db.common-tgt-items.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.common-tgt-items.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+db.common-tgt-items.datasource.dataSourceName=db.common-tgt-items
 db.common-tgt-items.datasource.maxConnections=10
 db.common-tgt-items.driver=org.postgresql.Driver
 db.common-tgt-items.platform=PostgreSQL
@@ -76,7 +76,9 @@ os.common-translated.os=os.common-translated-std
 # bar-interaction source
 db.bar.platform=PostgreSQL
 db.bar.driver=org.postgresql.Driver
-db.bar.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+#db.bar.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.bar.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.bar.datasource.serverName=pgsql-lan-dev
 db.bar.datasource.databaseName=BAR_interactions
 db.bar.datasource.user=access
@@ -85,7 +87,9 @@ db.bar.datasource.password=access
 # bar lookups
 db.bar-lu.platform=PostgreSQL
 db.bar-lu.driver=org.postgresql.Driver
-db.bar-lu.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+#db.bar-lu.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-lu.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.bar-lu.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.bar-lu.datasource.serverName=pgsql-lan-dev
 db.bar-lu.datasource.databaseName=BAR_annotations_lookup
 db.bar-lu.datasource.user=access
@@ -94,7 +98,9 @@ db.bar-lu.datasource.password=access
 # bar hormone atgenexp
 db.bar-he.platform=PostgreSQL
 db.bar-he.driver=org.postgresql.Driver
-db.bar-he.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+#db.bar-he.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-he.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.bar-he.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.bar-he.datasource.serverName=pgsql-lan-dev
 db.bar-he.datasource.databaseName=BAR_atgenexp_hormone
 db.bar-he.datasource.user=access
@@ -103,7 +109,9 @@ db.bar-he.datasource.password=access
 # bar tissue atgenexp
 db.bar-te.platform=PostgreSQL
 db.bar-te.driver=org.postgresql.Driver
-db.bar-te.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-te.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.bar-te.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+#db.bar-te.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
 db.bar-te.datasource.serverName=pgsql-lan-dev
 db.bar-te.datasource.databaseName=BAR_atgenexp
 db.bar-te.datasource.user=access
@@ -112,7 +120,9 @@ db.bar-te.datasource.password=access
 # bar pathogen atgenexp
 db.bar-pe.platform=PostgreSQL
 db.bar-pe.driver=org.postgresql.Driver
-db.bar-pe.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-pe.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.bar-pe.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+#db.bar-pe.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
 db.bar-pe.datasource.serverName=pgsql-lan-dev
 db.bar-pe.datasource.databaseName=BAR_atgenexp_pathogen
 db.bar-pe.datasource.user=access
@@ -121,7 +131,9 @@ db.bar-pe.datasource.password=access
 # bar plus atgenexp
 db.bar-ple.platform=PostgreSQL
 db.bar-ple.driver=org.postgresql.Driver
-db.bar-ple.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-ple.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.bar-ple.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+#db.bar-ple.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
 db.bar-ple.datasource.serverName=pgsql-lan-dev
 db.bar-ple.datasource.databaseName=BAR_atgenexp_plus
 db.bar-ple.datasource.user=access
@@ -130,7 +142,9 @@ db.bar-ple.datasource.password=access
 # bar stress atgenexp
 db.bar-se.platform=PostgreSQL
 db.bar-se.driver=org.postgresql.Driver
-db.bar-se.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-se.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.bar-se.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+#db.bar-se.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
 db.bar-se.datasource.serverName=pgsql-lan-dev
 db.bar-se.datasource.databaseName=BAR_atgenexp_stress
 db.bar-se.datasource.user=access
@@ -139,7 +153,9 @@ db.bar-se.datasource.password=access
 # bar light_series
 db.bar-lse.platform=PostgreSQL
 db.bar-lse.driver=org.postgresql.Driver
-db.bar-lse.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-lse.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.bar-lse.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+#db.bar-lse.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
 db.bar-lse.datasource.serverName=pgsql-lan-dev
 db.bar-lse.datasource.databaseName=BAR_light_series
 db.bar-lse.datasource.user=access
@@ -148,7 +164,9 @@ db.bar-lse.datasource.password=access
 # bar root
 db.bar-re.platform=PostgreSQL
 db.bar-re.driver=org.postgresql.Driver
-db.bar-re.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-re.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.bar-re.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+#db.bar-re.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
 db.bar-re.datasource.serverName=pgsql-lan-dev
 db.bar-re.datasource.databaseName=BAR_root
 db.bar-re.datasource.user=access
@@ -157,7 +175,9 @@ db.bar-re.datasource.password=access
 # bar seed_db
 db.bar-sde.platform=PostgreSQL
 db.bar-sde.driver=org.postgresql.Driver
-db.bar-sde.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-sde.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.bar-sde.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+#db.bar-sde.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
 db.bar-sde.datasource.serverName=pgsql-lan-dev
 db.bar-sde.datasource.databaseName=BAR_seed_db
 db.bar-sde.datasource.user=access
@@ -166,7 +186,9 @@ db.bar-sde.datasource.password=access
 # bar ecotypes
 db.bar-ee.platform=PostgreSQL
 db.bar-ee.driver=org.postgresql.Driver
-db.bar-ee.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-ee.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.bar-ee.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+#db.bar-ee.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
 db.bar-ee.datasource.serverName=pgsql-lan-dev
 db.bar-ee.datasource.databaseName=BAR_arabidopsis_ecotypes
 db.bar-ee.datasource.user=access
@@ -175,7 +197,9 @@ db.bar-ee.datasource.password=access
 # bar affydb
 db.bar-ae.platform=PostgreSQL
 db.bar-ae.driver=org.postgresql.Driver
-db.bar-ae.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-ae.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.bar-ae.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+#db.bar-ae.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
 db.bar-ae.datasource.serverName=pgsql-lan-dev
 db.bar-ae.datasource.databaseName=BAR_affydb
 db.bar-ae.datasource.user=access
@@ -185,19 +209,19 @@ db.bar-ae.datasource.password=access
 
 # flybase source database
 
-db.flybase.datasource.class=org.postgresql.ds.PGPoolingDataSource
+#db.flybase.datasource.class=org.postgresql.ds.PGPoolingDataSource
+db.flybase.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.flybase.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.flybase.datasource.dataSourceName=db.flybase
-#db.flybase.datasource.serverName=server_name
-#db.flybase.datasource.databaseName=flybase_db_name
-#db.flybase.datasource.user=user
-#db.flybase.datasource.password=password
 db.flybase.datasource.maxConnections=10
 db.flybase.driver=org.postgresql.Driver
 db.flybase.platform=PostgreSQL
 
 # wormbase source database
 
-db.wormbase.datasource.class=org.postgresql.ds.PGPoolingDataSource
+#db.wormbase.datasource.class=org.postgresql.ds.PGPoolingDataSource
+db.wormbase.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.wormbase.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.wormbase.datasource.dataSourceName=db.wormbase
 #db.wormbase.datasource.serverName=server_name
 #db.wormbase.datasource.databaseName=wormbase_db_name
@@ -283,15 +307,14 @@ db.drosdel.platform=MySQL
 
 # INTERPRO source database
 
-#db.interpro.datasource.class=com.mysql.jdbc.jdbc2.optional.MysqlConnectionPoolDataSource
-db.interpro.datasource.class=org.postgresql.ds.PGPoolingDataSource
+#db.interpro.datasource.class=org.postgresql.ds.PGPoolingDataSource
+db.interpro.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.interpro.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.interpro.datasource.dataSourceName=db.interpro
 #db.interpro.datasource.serverName=server_name
 #db.interpro.datasource.databaseName=interpro
 #db.interpro.datasource.user=user
 #db.interpro.datasource.password=password
 db.interpro.datasource.maxConnections=10
-#db.interpro.driver=com.mysql.jdbc.Driver
 db.interpro.driver=org.postgresql.Driver
-#db.interpro.platform=MySQL
 db.interpro.platform=PostgreSQL
