--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -82,6 +82,7 @@ begin.thirdBox.linkTitle = Take a tour
 
 # project specific config
 project.sitePrefix=/thalemine
+project.siteHome=https://www.araport.org
 project.siteLogo=https://s.gravatar.com/avatar/978e836a9d65238a784543ad932637cd.png
 project.helpLocation=https://www.araport.org/thalemine/user-guide
 
