+ Update login text in login.jsp and InterMineWebApp.properties

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -940,7 +940,7 @@ old.browser = You are using an unsupported browser. We recommend that you upgrad
 
 oauth2.error.granting = Error granting permission: {0}
 oauth2.error.getting-code = Error getting code: {0}
-login.oauth2 = Sign in with:
+login.oauth2 = Sign in with credentials from:
 login.renamed.bag = List {0} was renamed as {1}
 login.oauth2.successful = Signed in with {0} as {1} 
  
