now getting attribution from properties. set in web.properties, but can be overwritten in the general properties in the .intermine directory.

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -138,6 +138,10 @@ project.siteHome=https://www.araport.org
 project.siteLogo=https://s.gravatar.com/avatar/978e836a9d65238a784543ad932637cd.png
 project.helpLocation=https://www.araport.org/thalemine/user-guide
 
+tair.attribution=<strong><i>Source:</strong></i>TAIR, Aug 31, 2013.
+
+
+
 # popular templates in tabs, template category (key identifier)
 begin.tabs.1.id = Genes and Proteins
 begin.tabs.1.description = The gene models and other genome annotation in ThaleMine are provided by a variety \
