--- a/thalemine/dbmodel/resources/keyword_search.properties
+++ b/thalemine/dbmodel/resources/keyword_search.properties
@@ -1,12 +1,14 @@
-index.temp.directory = /opt/www/araport/tmp
+#index.temp.directory = /opt/www/araport/tmp
+index.temp.directory = /tmp
 index.references.BioEntity = synonyms organism crossReferences
 index.references.OntologyTerm = synonyms
+#index.references.MRNA = gene
 #index.references.Gene = pathways proteins.proteinDomains goAnnotation.ontologyTerm
 #index.references.Protein = proteinDomains
 
-index.ignore = Comment CrossReference Expression Homologue Interaction Location OntologyAnnotation OntologyRelation Sequence
+index.ignore = GeneFlankingRegion Comment CrossReference Expression Homologue Interaction Location OntologyAnnotation OntologyRelation Sequence
 
-index.ignore.fields = Gene.length Chromosome.length MRNA.length Protein.length Protein.md5checksum InterMineObject.id CDS.id Chromosome.id DataSet.id DataSource.id Gene.id GOTerm.id MRNA.id Ontology.id OntologyTerm.id OntologyTermSynonym.id Organism.id Protein.id ProteinDomain.id SOTerm.id Synonym.id Synonym.subjectId Sample.id Sample.barId Sample.file SampleProperty.id Experiment.id Experiment.experimentBarId Probe.id
+index.ignore.fields =  Sample.file
 
 index.facet.single.Category = Category
 index.facet.single.Organism = organism.shortName
@@ -14,6 +16,5 @@ index.facet.single.Organism = organism.shortName
 
 index.boost.Gene = 1.5
 index.boost.Protein = 1.2
-
 search.debug = false
 
