--- a/thalemine/default.intermine.integrate.properties
+++ b/thalemine/default.intermine.integrate.properties
@@ -14,11 +14,13 @@ os.production.noNotXml=true
 os.production.logTable=executelog
 os.production.minBagTableSize=1100
 
-#db.production.datasource.class=org.postgresql.ds.PGPoolingDataSource
+# fail on the first error when data loading
+dataLoader.allowMultipleErrors=false
+
 db.production.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.production.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.production.datasource.dataSourceName=db.production
-db.production.datasource.maxConnections=50
+db.production.datasource.maxConnections=20
 db.production.driver=org.postgresql.Driver
 db.production.platform=PostgreSQL
 
@@ -41,11 +43,10 @@ integration.production.datatrackerCommitSize=50000
 # db.common-tgt-items.datasource.databaseName=db_name
 # db.common-tgt-items.datasource.user=user
 # db.common-tgt-items.datasource.password=password
-#db.common-tgt-items.datasource.class=org.postgresql.ds.PGPoolingDataSource
 db.common-tgt-items.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.common-tgt-items.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.common-tgt-items.datasource.dataSourceName=db.common-tgt-items
-db.common-tgt-items.datasource.maxConnections=10
+db.common-tgt-items.datasource.maxConnections=5
 db.common-tgt-items.driver=org.postgresql.Driver
 db.common-tgt-items.platform=PostgreSQL
 
@@ -76,9 +77,9 @@ os.common-translated.os=os.common-translated-std
 # bar-interaction source
 db.bar.platform=PostgreSQL
 db.bar.driver=org.postgresql.Driver
-#db.bar.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
 db.bar.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.bar.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+db.bar.datasource.maxConnections=5
 db.bar.datasource.serverName=pgsql-lan-dev
 db.bar.datasource.databaseName=BAR_interactions
 db.bar.datasource.user=access
@@ -87,9 +88,9 @@ db.bar.datasource.password=access
 # bar lookups
 db.bar-lu.platform=PostgreSQL
 db.bar-lu.driver=org.postgresql.Driver
-#db.bar-lu.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
 db.bar-lu.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.bar-lu.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+db.bar-lu.datasource.maxConnections=5
 db.bar-lu.datasource.serverName=pgsql-lan-dev
 db.bar-lu.datasource.databaseName=BAR_annotations_lookup
 db.bar-lu.datasource.user=access
@@ -98,9 +99,9 @@ db.bar-lu.datasource.password=access
 # bar hormone atgenexp
 db.bar-he.platform=PostgreSQL
 db.bar-he.driver=org.postgresql.Driver
-#db.bar-he.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
 db.bar-he.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.bar-he.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+db.bar-he.datasource.maxConnections=5
 db.bar-he.datasource.serverName=pgsql-lan-dev
 db.bar-he.datasource.databaseName=BAR_atgenexp_hormone
 db.bar-he.datasource.user=access
@@ -111,7 +112,7 @@ db.bar-te.platform=PostgreSQL
 db.bar-te.driver=org.postgresql.Driver
 db.bar-te.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.bar-te.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
-#db.bar-te.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-te.datasource.maxConnections=5
 db.bar-te.datasource.serverName=pgsql-lan-dev
 db.bar-te.datasource.databaseName=BAR_atgenexp
 db.bar-te.datasource.user=access
@@ -122,7 +123,7 @@ db.bar-pe.platform=PostgreSQL
 db.bar-pe.driver=org.postgresql.Driver
 db.bar-pe.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.bar-pe.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
-#db.bar-pe.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-pe.datasource.maxConnections=5
 db.bar-pe.datasource.serverName=pgsql-lan-dev
 db.bar-pe.datasource.databaseName=BAR_atgenexp_pathogen
 db.bar-pe.datasource.user=access
@@ -133,7 +134,7 @@ db.bar-ple.platform=PostgreSQL
 db.bar-ple.driver=org.postgresql.Driver
 db.bar-ple.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.bar-ple.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
-#db.bar-ple.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-ple.datasource.maxConnections=5
 db.bar-ple.datasource.serverName=pgsql-lan-dev
 db.bar-ple.datasource.databaseName=BAR_atgenexp_plus
 db.bar-ple.datasource.user=access
@@ -144,7 +145,7 @@ db.bar-se.platform=PostgreSQL
 db.bar-se.driver=org.postgresql.Driver
 db.bar-se.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.bar-se.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
-#db.bar-se.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-se.datasource.maxConnections=5
 db.bar-se.datasource.serverName=pgsql-lan-dev
 db.bar-se.datasource.databaseName=BAR_atgenexp_stress
 db.bar-se.datasource.user=access
@@ -155,7 +156,7 @@ db.bar-lse.platform=PostgreSQL
 db.bar-lse.driver=org.postgresql.Driver
 db.bar-lse.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.bar-lse.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
-#db.bar-lse.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-lse.datasource.maxConnections=5
 db.bar-lse.datasource.serverName=pgsql-lan-dev
 db.bar-lse.datasource.databaseName=BAR_light_series
 db.bar-lse.datasource.user=access
@@ -166,7 +167,7 @@ db.bar-re.platform=PostgreSQL
 db.bar-re.driver=org.postgresql.Driver
 db.bar-re.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.bar-re.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
-#db.bar-re.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-re.datasource.maxConnections=5
 db.bar-re.datasource.serverName=pgsql-lan-dev
 db.bar-re.datasource.databaseName=BAR_root
 db.bar-re.datasource.user=access
@@ -177,7 +178,7 @@ db.bar-sde.platform=PostgreSQL
 db.bar-sde.driver=org.postgresql.Driver
 db.bar-sde.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.bar-sde.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
-#db.bar-sde.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-sde.datasource.maxConnections=5
 db.bar-sde.datasource.serverName=pgsql-lan-dev
 db.bar-sde.datasource.databaseName=BAR_seed_db
 db.bar-sde.datasource.user=access
@@ -188,7 +189,7 @@ db.bar-ee.platform=PostgreSQL
 db.bar-ee.driver=org.postgresql.Driver
 db.bar-ee.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.bar-ee.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
-#db.bar-ee.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-ee.datasource.maxConnections=5
 db.bar-ee.datasource.serverName=pgsql-lan-dev
 db.bar-ee.datasource.databaseName=BAR_arabidopsis_ecotypes
 db.bar-ee.datasource.user=access
@@ -199,7 +200,7 @@ db.bar-ae.platform=PostgreSQL
 db.bar-ae.driver=org.postgresql.Driver
 db.bar-ae.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.bar-ae.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
-#db.bar-ae.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.bar-ae.datasource.maxConnections=5
 db.bar-ae.datasource.serverName=pgsql-lan-dev
 db.bar-ae.datasource.databaseName=BAR_affydb
 db.bar-ae.datasource.user=access
@@ -209,25 +210,19 @@ db.bar-ae.datasource.password=access
 
 # flybase source database
 
-#db.flybase.datasource.class=org.postgresql.ds.PGPoolingDataSource
 db.flybase.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.flybase.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.flybase.datasource.dataSourceName=db.flybase
-db.flybase.datasource.maxConnections=10
+db.flybase.datasource.maxConnections=5
 db.flybase.driver=org.postgresql.Driver
 db.flybase.platform=PostgreSQL
 
 # wormbase source database
 
-#db.wormbase.datasource.class=org.postgresql.ds.PGPoolingDataSource
 db.wormbase.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.wormbase.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.wormbase.datasource.dataSourceName=db.wormbase
-#db.wormbase.datasource.serverName=server_name
-#db.wormbase.datasource.databaseName=wormbase_db_name
-#db.wormbase.datasource.user=user
-#db.wormbase.datasource.password=password
-db.wormbase.datasource.maxConnections=10
+db.wormbase.datasource.maxConnections=5
 db.wormbase.driver=org.postgresql.Driver
 db.wormbase.platform=PostgreSQL
 
@@ -235,10 +230,6 @@ db.wormbase.platform=PostgreSQL
 
 db.anoest.datasource.class=com.mysql.jdbc.jdbc2.optional.MysqlConnectionPoolDataSource
 db.anoest.datasource.dataSourceName=db.anoest
-#db.anoest.datasource.serverName=server_name
-#db.anoest.datasource.databaseName=db_name
-#db.anoest.datasource.user=user
-#db.anoest.datasource.password=password
 db.anoest.datasource.maxConnections=10
 db.anoest.driver=com.mysql.jdbc.Driver
 db.anoest.platform=MySQL
@@ -247,10 +238,6 @@ db.anoest.platform=MySQL
 
 db.ensembl-anopheles.datasource.class=com.mysql.jdbc.jdbc2.optional.MysqlConnectionPoolDataSource
 db.ensembl-anopheles.datasource.dataSourceName=db.ensembl-anopheles
-#db.ensembl-anopheles.datasource.serverName=server_name
-#db.ensembl-anopheles.datasource.databaseName=anopheles_dbname
-#db.ensembl-anopheles.datasource.user=user
-#db.ensembl-anopheles.datasource.password=password
 db.ensembl-anopheles.datasource.maxConnections=10
 db.ensembl-anopheles.driver=com.mysql.jdbc.Driver
 db.ensembl-anopheles.platform=MySQL
@@ -259,10 +246,6 @@ db.ensembl-anopheles.platform=MySQL
 
 db.ensembl-apis-mellifera.datasource.class=com.mysql.jdbc.jdbc2.optional.MysqlConnectionPoolDataSource
 db.ensembl-apis-mellifera.datasource.dataSourceName=db.ensembl-apis-mellifera
-#db.ensembl-apis-mellifera.datasource.serverName=server_name
-#db.ensembl-apis-mellifera.datasource.databaseName=apis-mellifera_dbname
-#db.ensembl-apis-mellifera.datasource.user=user
-#db.ensembl-apis-mellifera.datasource.password=password
 db.ensembl-apis-mellifera.datasource.maxConnections=10
 db.ensembl-apis-mellifera.driver=com.mysql.jdbc.Driver
 db.ensembl-apis-mellifera.platform=MySQL
@@ -271,10 +254,6 @@ db.ensembl-apis-mellifera.platform=MySQL
 
 db.ensembl-drosophila.datasource.class=com.mysql.jdbc.jdbc2.optional.MysqlConnectionPoolDataSource
 db.ensembl-drosophila.datasource.dataSourceName=db.ensembl-drosophila
-#db.ensembl-drosophila.datasource.serverName=server_name
-#db.ensembl-drosophila.datasource.databaseName=drosophila_dbname
-#db.ensembl-drosophila.datasource.user=user
-#db.ensembl-drosophila.datasource.password=password
 db.ensembl-drosophila.datasource.maxConnections=10
 db.ensembl-drosophila.driver=com.mysql.jdbc.Driver
 db.ensembl-drosophila.platform=MySQL
@@ -284,10 +263,6 @@ db.ensembl-drosophila.platform=MySQL
 
 db.ensembl-human.datasource.class=com.mysql.jdbc.jdbc2.optional.MysqlConnectionPoolDataSource
 db.ensembl-human.datasource.dataSourceName=db.ensembl-human
-#db.ensembl-human.datasource.serverName=server_name
-#db.ensembl-human.datasource.databaseName=human_dbname
-#db.ensembl-human.datasource.user=user
-#db.ensembl-human.datasource.password=password
 db.ensembl-human.datasource.maxConnections=10
 db.ensembl-human.driver=com.mysql.jdbc.Driver
 db.ensembl-human.platform=MySQL
@@ -297,24 +272,15 @@ db.ensembl-human.platform=MySQL
 
 db.drosdel.datasource.class=com.mysql.jdbc.jdbc2.optional.MysqlConnectionPoolDataSource
 db.drosdel.datasource.dataSourceName=db.drosdel
-#db.drosdel.datasource.serverName=server_name
-#db.drosdel.datasource.databaseName=human_dbname
-#db.drosdel.datasource.user=user
-#db.drosdel.datasource.password=password
 db.drosdel.datasource.maxConnections=10
 db.drosdel.driver=com.mysql.jdbc.Driver
 db.drosdel.platform=MySQL
 
 # INTERPRO source database
 
-#db.interpro.datasource.class=org.postgresql.ds.PGPoolingDataSource
 db.interpro.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.interpro.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.interpro.datasource.dataSourceName=db.interpro
-#db.interpro.datasource.serverName=server_name
-#db.interpro.datasource.databaseName=interpro
-#db.interpro.datasource.user=user
-#db.interpro.datasource.password=password
-db.interpro.datasource.maxConnections=10
+db.interpro.datasource.maxConnections=5
 db.interpro.driver=org.postgresql.Driver
 db.interpro.platform=PostgreSQL
