adds interpro links to prot dom pages (MINE-323)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -23,6 +23,8 @@ attributelink.uniProt.Protein.*.uniprotAccession.url=http://www.uniprot.org/unip
 attributelink.uniProt.Protein.*.uniprotAccession.text=UniProt: <<attributeValue>>
 attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpeg
 
+attributelink.interpro.ProteinDomain.*.primaryIdentifier.url=http://www.ebi.ac.uk/interpro/entry/<<attributeValue>>
+attributelink.interpro.ProteinDomain.*.primaryIdentifier.text=InterPro: <<attributeValue>>
 
 attributelink.TAIR.Gene.*.primaryIdentifier.url=http://www.arabidopsis.org/servlets/TairObject?name=<<attributeValue>>&type=locus
 attributelink.TAIR.Gene.*.primaryIdentifier.text=TAIR
