adds link to pep2pro from gene

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -35,6 +35,10 @@ attributelink.AtGDB.Gene.*.primaryIdentifier.text=AtGDB
 attributelink.AtProteome.Gene.*.primaryIdentifier.url=http://www.atproteome.ethz.ch/?page=tair&agi=<<attributeValue>>
 attributelink.AtProteome.Gene.*.primaryIdentifier.text=AtProteome
 
+attributelink.pep2pro.Gene.*.primaryIdentifier.url=http://fgcz-pep2pro.uzh.ch/locus.php?<<attributeValue>>
+attributelink.pep2pro.Gene.*.primaryIdentifier.text=pep2pro
+
+
 #attributelink.MIPS.Gene.*.primaryIdentifier.url=http://mips.helmholtz-muenchen.de/plant/athal/searchjsp/searchforge.jsp?searchText=<<attributeValue>>
 #attributelink.MIPS.Gene.*.primaryIdentifier.text=MIPS
 
