MINE-313: temporarily remove external links to ratmine and zfinmine to improve loading on firefox until a more permanent fix.

--- a/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
@@ -196,13 +196,13 @@ intermines.flymine.frontcolor=#FFF
 intermines.flymine.defaultValues=D. melanogaster
 intermines.flymine.description=Mine with D. melanogaster data
 
-intermines.ratmine.url=http://ratmine.mcw.edu/ratmine
-intermines.ratmine.name=RatMine
-intermines.ratmine.logo=ratmine_logo.png
-intermines.ratmine.bgcolor=#ABC2DA
-intermines.ratmine.frontcolor=#000
-intermines.ratmine.defaultValues=R. norvegicus
-intermines.ratmine.description=Mine for the Rat Genome Database (RGD)
+#intermines.ratmine.url=http://ratmine.mcw.edu/ratmine
+#intermines.ratmine.name=RatMine
+#intermines.ratmine.logo=ratmine_logo.png
+#intermines.ratmine.bgcolor=#ABC2DA
+#intermines.ratmine.frontcolor=#000
+#intermines.ratmine.defaultValues=R. norvegicus
+#intermines.ratmine.description=Mine for the Rat Genome Database (RGD)
 
 intermines.yeastmine.url=http://yeastmine.yeastgenome.org/yeastmine
 intermines.yeastmine.name=YeastMine
@@ -212,13 +212,13 @@ intermines.yeastmine.frontcolor=#FFF
 intermines.yeastmine.defaultValues=S. cerevisiae
 intermines.yeastmine.description=Mine for the Saccharomyces Genome Database (SGD)
 
-intermines.zfinmine.url=http://zebrafishmine.org
-intermines.zfinmine.name=ZFINMine
-intermines.zfinmine.logo=zfinlogo.png
-intermines.zfinmine.bgcolor=#D5D5D5
-intermines.zfinmine.frontcolor=#000
-intermines.zfinmine.defaultValues=D. rerio
-intermines.zfinmine.description=Mine for ZFIN
+#intermines.zfinmine.url=http://zebrafishmine.org
+#intermines.zfinmine.name=ZFINMine
+#intermines.zfinmine.logo=zfinlogo.png
+#intermines.zfinmine.bgcolor=#D5D5D5
+#intermines.zfinmine.frontcolor=#000
+#intermines.zfinmine.defaultValues=D. rerio
+#intermines.zfinmine.description=Mine for ZFIN
 
 intermines.metabolicmine.url=http://www.metabolicmine.org/beta
 intermines.metabolicmine.name=metabolicMine
