--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -26,42 +26,11 @@ attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpe
 attributelink.interpro.ProteinDomain.*.primaryIdentifier.url=http://www.ebi.ac.uk/interpro/entry/<<attributeValue>>
 attributelink.interpro.ProteinDomain.*.primaryIdentifier.text=InterPro: <<attributeValue>>
 
-attributelink.TAIR.Gene.*.primaryIdentifier.url=http://www.arabidopsis.org/servlets/TairObject?name=<<attributeValue>>&type=locus
-attributelink.TAIR.Gene.*.primaryIdentifier.text=TAIR
-
-attributelink.AtGDB.Gene.*.primaryIdentifier.url=http://www.plantgdb.org/AtGDB-cgi/findRegion.pl?id=<<attributeValue>>
-attributelink.AtGDB.Gene.*.primaryIdentifier.text=AtGDB
-
-attributelink.AtProteome.Gene.*.primaryIdentifier.url=http://www.atproteome.ethz.ch/?page=tair&agi=<<attributeValue>>
-attributelink.AtProteome.Gene.*.primaryIdentifier.text=AtProteome
-
-attributelink.pep2pro.Gene.*.primaryIdentifier.url=http://fgcz-pep2pro.uzh.ch/locus.php?<<attributeValue>>
-attributelink.pep2pro.Gene.*.primaryIdentifier.text=pep2pro
-
-
-#attributelink.MIPS.Gene.*.primaryIdentifier.url=http://mips.helmholtz-muenchen.de/plant/athal/searchjsp/searchforge.jsp?searchText=<<attributeValue>>
-#attributelink.MIPS.Gene.*.primaryIdentifier.text=MIPS
-
-attributelink.PPD.Gene.*.primaryIdentifier.url=http://ppdb.tc.cornell.edu/gene.aspx?acc=<<attributeValue>>
-attributelink.PPD.Gene.*.primaryIdentifier.text=Plant Proteome Database
-
-attributelink.Plaza.Gene.*.primaryIdentifier.url=http://bioinformatics.psb.ugent.be/plaza/genes/view/<<attributeValue>>
-attributelink.Plaza.Gene.*.primaryIdentifier.text=Plaza
-
-attributelink.TDNAe.Gene.*.primaryIdentifier.url=http://signal.salk.edu/cgi-bin/tdnaexpress?gene=<<attributeValue>>
-attributelink.TDNAe.Gene.*.primaryIdentifier.text=T-DNA Express
-
-attributelink.SUBA.Gene.*.primaryIdentifier.url=http://www.plantenergy.uwa.edu.au/applications/suba2/flatfile.php?id=<<attributeValue>>
-attributelink.SUBA.Gene.*.primaryIdentifier.text=SUBA
-
-attributelink.MPSS.Gene.*.primaryIdentifier.url=http://mpss.udel.edu/common/web/GeneAnalysis.php?SITE=at_sRNA&featureName=<<attributeValue>>
-attributelink.MPSS.Gene.*.primaryIdentifier.text=MPSS
-
-attributelink.Salk.Gene.*.primaryIdentifier.url=http://natural.salk.edu/cgi-bin/snp.cgi?QUERY=<<attributeValue>>
-attributelink.Salk.Gene.*.primaryIdentifier.text=Salk SNP Viewer
-
 attributelink.Ace.Gene.*.primaryIdentifier.url=http://www.ncbi.nlm.nih.gov/IEB/Research/Acembly/av.cgi?db=ara&term=<<attributeValue>>&submit=Go
 attributelink.Ace.Gene.*.primaryIdentifier.text=AceView
+
+attributelink.AtGDB.Gene.*.primaryIdentifier.text=AtGDB
+attributelink.AtGDB.Gene.*.primaryIdentifier.url=http://www.plantgdb.org/AtGDB-cgi/findRegion.pl?id=<<attributeValue>>
 
 attributelink.AtGenExpress.Gene.*.primaryIdentifier.url=http://jsp.weigelworld.org/expviz/expviz.jsp?experiment=development&normalization=absolute&probesetcsv=<<attributeValue>>&action=Run
 attributelink.AtGenExpress.Gene.*.primaryIdentifier.text=AtGenExpress
@@ -69,16 +38,41 @@ attributelink.AtGenExpress.Gene.*.primaryIdentifier.text=AtGenExpress
 attributelink.ATTED.Gene.*.primaryIdentifier.url=http://atted.jp/data/locus/<<attributeValue>>.shtml
 attributelink.ATTED.Gene.*.primaryIdentifier.text=ATTED-II
 
-attributelink.PGDD.Gene.*.primaryIdentifier.url=http://chibba.agtec.uga.edu/duplication/index/locus_app?lc=<<attributeValue>>
-attributelink.PGDD.Gene.*.primaryIdentifier.text=PGDD
+#attributelink.MIPS.Gene.*.primaryIdentifier.url=http://mips.helmholtz-muenchen.de/plant/athal/searchjsp/searchforge.jsp?searchText=<<attributeValue>>
+#attributelink.MIPS.Gene.*.primaryIdentifier.text=MIPS
+
+attributelink.MPSS.Gene.*.primaryIdentifier.url=http://mpss.udel.edu/common/web/GeneAnalysis.php?SITE=at_sRNA&featureName=<<attributeValue>>
+attributelink.MPSS.Gene.*.primaryIdentifier.text=MPSS
 
 attributelink.Entrez.Gene.*.primaryIdentifier.url=http://www.ncbi.nlm.nih.gov/gene/?term=<<attributeValue>>
 attributelink.Entrez.Gene.*.primaryIdentifier.text=NCBI-Entrez
 
-#attributelink.PPD.Gene.*.primaryIdentifier.url=http://www.phytozome.net//results.php?method=0&search=1&sbut=Submit+keyword+search&searchText=peptidename:<<attributeValue>>*
-attributelink.PPD.Gene.*.primaryIdentifier.url=http://phytozome.jgi.doe.gov/pz/portal.html#!gene?organism=Athaliana&searchText=locusName:<<attributeValue>>
-attributelink.PPD.Gene.*.primaryIdentifier.text=Phytozome Plant Gene
+attributelink.pep2pro.Gene.*.primaryIdentifier.url=http://fgcz-pep2pro.uzh.ch/locus.php?<<attributeValue>>
+attributelink.pep2pro.Gene.*.primaryIdentifier.text=pep2pro
 
+attributelink.PGDD.Gene.*.primaryIdentifier.url=http://chibba.agtec.uga.edu/duplication/index/locus_app?lc=<<attributeValue>>
+attributelink.PGDD.Gene.*.primaryIdentifier.text=PGDD
+
+attributelink.Phytozome.Gene.*.primaryIdentifier.url=http://phytozome.jgi.doe.gov/pz/portal.html#!gene?organism=Athaliana&searchText=locusName:<<attributeValue>>
+attributelink.Phytozome.Gene.*.primaryIdentifier.text=Phytozome
+
+attributelink.PPD.Gene.*.primaryIdentifier.url=http://ppdb.tc.cornell.edu/gene.aspx?acc=<<attributeValue>>
+attributelink.PPD.Gene.*.primaryIdentifier.text=Plant Proteome Database
+
+attributelink.Plaza.Gene.*.primaryIdentifier.url=http://bioinformatics.psb.ugent.be/plaza/genes/view/<<attributeValue>>
+attributelink.Plaza.Gene.*.primaryIdentifier.text=Plaza
+
+attributelink.SUBA.Gene.*.primaryIdentifier.url=http://www.plantenergy.uwa.edu.au/applications/suba2/flatfile.php?id=<<attributeValue>>
+attributelink.SUBA.Gene.*.primaryIdentifier.text=SUBA
+
+attributelink.Salk.Gene.*.primaryIdentifier.url=http://natural.salk.edu/cgi-bin/snp.cgi?QUERY=<<attributeValue>>
+attributelink.Salk.Gene.*.primaryIdentifier.text=Salk SNP Viewer
+
+attributelink.TDNAe.Gene.*.primaryIdentifier.url=http://signal.salk.edu/cgi-bin/tdnaexpress?gene=<<attributeValue>>
+attributelink.TDNAe.Gene.*.primaryIdentifier.text=T-DNA Express
+
+attributelink.TAIR.Gene.*.primaryIdentifier.url=http://www.arabidopsis.org/servlets/TairObject?name=<<attributeValue>>&type=locus
+attributelink.TAIR.Gene.*.primaryIdentifier.text=TAIR
 
 
 
