updates Aracyc link (MINE-378)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -30,7 +30,7 @@ attributelink.Ace.Gene.*.primaryIdentifier.url=http://www.ncbi.nlm.nih.gov/IEB/R
 attributelink.Ace.Gene.*.primaryIdentifier.text=AceView
 
 attributelink.Aracyc.Gene.*.primaryIdentifier.text=Aracyc
-attributelink.Aracyc.Gene.*.primaryIdentifier.url=http://pmn.plantcyc.org/ARA/NEW-IMAGE?type=NIL&object=<<attributeValue>>
+attributelink.Aracyc.Gene.*.primaryIdentifier.url=http://pmn.plantcyc.org/ARA/substring-search?type=NIL&object=<<attributeValue>>
 
 attributelink.AtcisDB.Gene.*.primaryIdentifier.text=AtcisDB
 attributelink.AtcisDB.Gene.*.primaryIdentifier.url=http://arabidopsis.med.ohio-state.edu/AtcisDB/atcisview.html?id=<<attributeValue>>
