adds Aramemnon link to gene pages (MINE-382)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -32,6 +32,9 @@ attributelink.Ace.Gene.*.primaryIdentifier.text=AceView
 attributelink.Aracyc.Gene.*.primaryIdentifier.text=Aracyc
 attributelink.Aracyc.Gene.*.primaryIdentifier.url=http://pmn.plantcyc.org/ARA/substring-search?type=NIL&object=<<attributeValue>>
 
+attributelink.Aramemnon.Gene.*.primaryIdentifier.text=Aramemnon
+attributelink.Aramemnon.Gene.*.primaryIdentifier.url=http://aramemnon.botanik.uni-koeln.de/seq_view.ep?search=<<attributeValue>>
+
 attributelink.AtcisDB.Gene.*.primaryIdentifier.text=AtcisDB
 attributelink.AtcisDB.Gene.*.primaryIdentifier.url=http://arabidopsis.med.ohio-state.edu/AtcisDB/atcisview.html?id=<<attributeValue>>
 
