+ Enabled protein2ipr source + Placed protein2ipr.dat file in correct location on filesystem + Added linkout to AthaMap website from ThaleMine Gene page

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -41,6 +41,9 @@ attributelink.AtcisDB.Gene.*.primaryIdentifier.url=http://arabidopsis.med.ohio-s
 attributelink.AtGDB.Gene.*.primaryIdentifier.text=AtGDB
 attributelink.AtGDB.Gene.*.primaryIdentifier.url=http://www.plantgdb.org/AtGDB-cgi/findRegion.pl?id=<<attributeValue>>
 
+attributelink.AthaMap.Gene.*.primaryIdentifier.text=AthaMap
+attributelink.AthaMap.Gene.*.primaryIdentifier.url=http://www.athamap.de/search.php?accNo=<<attributeValue>>
+
 attributelink.AtGenExpress.Gene.*.primaryIdentifier.url=http://jsp.weigelworld.org/expviz/expviz.jsp?experiment=development&normalization=absolute&probesetcsv=<<attributeValue>>&action=Run
 attributelink.AtGenExpress.Gene.*.primaryIdentifier.text=AtGenExpress
 
