MINE-83: changes text in welcome box

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -153,16 +153,21 @@ bag.example.identifiers.protein=A0MES8, B3H6J0_ARATH, AT1G02145, AAE14, AT4G0012
 bag.example.identifiers=AT4G19020, AT5G39770, AT5G45400, AT3G44400, AT3G48090, AT5G41750
 
 # list upload box
-begin.listBox.title = Analyse
+begin.listBox.title = Lists
 begin.listBox.description = Enter a <strong>list</strong> of identifiers.
 
 
 # third box
 begin.thirdBox.title = First Time Here?
 begin.thirdBox.visitedTitle = Welcome Back!
-begin.thirdBox.description = ThaleMine integrates many types of data for <em>Arabidopsis</em> \
-<em>thaliana</em>. You can run flexible queries, export results and analyse lists of \
-data.
+begin.thirdBox.description = <strong>ThaleMine</strong> enables you to analyze <b>gene</b> and <b>protein</b> data from TAIR, \
+<b>expression</b> and <b>interaction</b> data from BAR, <b>ortholog</b> data from Panther, and more. \
+<br>Use plain text or structured queries for interactive gene and protein reports.</br>\
+Part of <a href="https://www.araport.org/"><strong>Araport</strong></a>, the new Arabidopsis Information Portal.
+
+#ThaleMine integrates many types of data for <em>Arabidopsis</em> \
+#<em>thaliana</em>. You can run flexible queries, export results and analyse lists of \
+#data.
 begin.thirdBox.link = https://www.araport.org/thalemine/user-guide
 begin.thirdBox.linkTitle = Take a tour
 
@@ -230,6 +235,7 @@ genomicRegionSearch.liftOver.url =
 genomicRegionSearch.exportChromosomeSegment = true
 
 # set CDN to araport
+#tmp rm until they update
 head.cdn.location = https://cdn.araport.org
 
 # load custom JS file
