adds examples for list upload (MINE-359)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -147,10 +147,48 @@ begin.searchBox.description = Search ThaleMine. Enter <strong>names</strong>, <s
 or <strong>keywords</strong> for genes, proteins, ontology terms, authors, etc. (e.g. \
 <em>FT</em>, APL_ARATH, lateral root development, Somerville).
 
-
-bag.example.identifiers.protein=A0MES8, B3H6J0_ARATH, AT1G02145, AAE14, AT4G00124.1, AT4G01515
 # bag upload examples
 bag.example.identifiers=AT4G19020, AT5G39770, AT5G45400, AT3G44400, AT3G48090, AT5G41750
+bag.example.identifiers.protein=A0MES8, B3H6J0_ARATH, AT1G02145, AAE14, AT4G00124.1, AT4G01515
+
+bag.example.identifiers.author="Chen HM", "Axtell MJ"
+bag.example.identifiers.cds=AT1G51370.2_CDS, AT1G21110.1_CDS, ATMG00830.1_CDS, AT5G57565.3_CDS
+bag.example.identifiers.chromosome=Chr1, Chr2, ChrM
+bag.example.identifiers.dataset="UniProt FASTA dataset", "Genome Annotation", "PubMed to gene mapping"
+bag.example.identifiers.datasource=UniProt, TAIR, Panther
+bag.example.identifiers.ecnumber=1.8.1.7, 6.2.1.8, 5.3.99.6
+bag.example.identifiers.exon=AT1G01110:exon:2, AT2G45150:exon:3
+bag.example.identifiers.fiveprimeutr=AT3G10270:five_prime_UTR:1, AT5G50012:five_prime_UTR:2, AT4G35830:five_prime_UTR:1
+bag.example.identifiers.goterm=GO:0005929, GO:0072511, GO:0000041
+bag.example.identifiers.geneflankingregion="AT1G01600 0.5kb downstream", "AT1G01600 1.0kb upstream", "AT1G01600 3.0kb downstream"
+bag.example.identifiers.interactionterm=MI:1110, MI:0577, MI:1179, MI:2046
+bag.example.identifiers.intron=intron_Chr1_30312..30409, intron_Chr1_188177..188283, intron_ChrM_328079..329734
+bag.example.identifiers.mrna=AT5G59280.1, AT1G16240.3, AT2G29190.2
+
+bag.example.identifiers.mirna=AT1G67195.1, AT1G26975.1, AT3G18827.1
+bag.example.identifiers.ncrna=AT1G56612.1, AT4G38932.1, AT5G67488.1
+bag.example.identifiers.ontologyterm="DNA repair", "Hydrolase", "Host-virus interaction"
+
+bag.example.identifiers.probe=17495_s_at, 258804_at, 256884_at
+bag.example.identifiers.proteindomain=IPR000001, IPR000003, IPR000011
+bag.example.identifiers.pseudogene=AT2G07731.1, AT3G33205.1, AT4G06600.1
+bag.example.identifiers.pseudogenicexon="AT1G06370:pseudogenic_exon:8", "AT1G06370:pseudogenic_exon:7", "AT1G06370:pseudogenic_exon:1"
+bag.example.identifiers.pseudogenictranscript=AT2G07731.1, AT3G33205.1, AT4G06600.1
+bag.example.identifiers.publication=12663220, 12683933, 9520477
+bag.example.identifiers.rna=ATMG00020.1, ATCG01170.1, AT2G01020.1
+bag.example.identifiers.soterm=SO:0000167, SO:0000233, SO:0001183
+bag.example.identifiers.snrna=AT3G56825.1, AT1G61275.1, AT5G46315.1
+bag.example.identifiers.snorna=AT1G03502.1, AT2G17295.1, AT4G26365.1
+bag.example.identifiers.trna=ATCG00030.1, AT1G42120.1, AT1G29210.1
+bag.example.identifiers.threeprimeutr=AT2G45250:three_prime_UTR:1,AT2G45250:three_prime_UTR:2,AT2G45250:three_prime_UTR:3
+bag.example.identifiers.transcript=AT2G38560.1, AT4G25270.1, AT1G08070.1
+bag.example.identifiers.transposableelement=AT1TE00010, AT5TE93070, AT5TE75125
+bag.example.identifiers.transposableelementgene=AT1G33570, AT1G35060, AT5G59640
+bag.example.identifiers.transposonfragment=AT1TE00010:transposon_fragment:1, AT1TE00025:transposon_fragment:2, AT1TE03180:transposon_fragment:1
+bag.example.identifiers.utr=AT2G45250:three_prime_UTR:1,AT2G45250:three_prime_UTR:3, AT3G10270:five_prime_UTR:1, AT5G50012:five_prime_UTR:2
+
+
+
 
 # list upload box
 begin.listBox.title = Lists
@@ -236,7 +274,7 @@ genomicRegionSearch.exportChromosomeSegment = true
 
 # set CDN to araport
 #tmp rm until they update
-head.cdn.location = https://cdn.araport.org
+#head.cdn.location = https://cdn.araport.org
 
 # load custom JS file
 head.js.all.MY_JS_OPTIONS = thalemine-options.js
