--- a/imbuild/task.log4j.properties
+++ b/imbuild/task.log4j.properties
@@ -1,19 +1,11 @@
 #log4j.debug=true
 
 log4j.appender.intermine=org.apache.log4j.RollingFileAppender
-log4j.appender.intermine.File=${catalina.base}/logs/intermine.log
+log4j.appender.intermine.File=intermine.log
 log4j.appender.intermine.BufferedIO=false
 log4j.appender.intermine.MaxFileSize=25MB
 log4j.appender.intermine.MaxBackupIndex=40
 log4j.appender.intermine.layout=org.apache.log4j.PatternLayout
 log4j.appender.intermine.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %37c %3x - %m%n
 
-log4j.appender.intermine2=org.apache.log4j.RollingFileAppender
-log4j.appender.intermine2.File=intermine-build.log
-log4j.appender.intermine2.BufferedIO=false
-log4j.appender.intermine2.MaxFileSize=25MB
-log4j.appender.intermine2.MaxBackupIndex=40
-log4j.appender.intermine2.layout=org.apache.log4j.PatternLayout
-log4j.appender.intermine2.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %37c %3x - %m%n
-
-log4j.rootLogger=INFO, intermine, intermine2
+log4j.rootLogger=INFO, intermine
