adds last examples (MINE-359)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -168,6 +168,7 @@ bag.example.identifiers.mrna=AT5G59280.1, AT1G16240.3, AT2G29190.2
 bag.example.identifiers.mirna=AT1G67195.1, AT1G26975.1, AT3G18827.1
 bag.example.identifiers.ncrna=AT1G56612.1, AT4G38932.1, AT5G67488.1
 bag.example.identifiers.ontologyterm="DNA repair", "Hydrolase", "Host-virus interaction"
+bag.example.identifiers.organism="Arabidopsis thaliana", "Homo sapiens"
 
 bag.example.identifiers.probe=17495_s_at, 258804_at, 256884_at
 bag.example.identifiers.proteindomain=IPR000001, IPR000003, IPR000011
@@ -176,6 +177,8 @@ bag.example.identifiers.pseudogenicexon="AT1G06370:pseudogenic_exon:8", "AT1G063
 bag.example.identifiers.pseudogenictranscript=AT2G07731.1, AT3G33205.1, AT4G06600.1
 bag.example.identifiers.publication=12663220, 12683933, 9520477
 bag.example.identifiers.rna=ATMG00020.1, ATCG01170.1, AT2G01020.1
+bag.example.identifiers.sample=12_h_CO2_1,1-3-3
+bag.example.identifiers.sequencefeature="AT1G01010", "AT1G01010 0.5kb downstream", "AT1G01010 0.5kb upstream"
 bag.example.identifiers.soterm=SO:0000167, SO:0000233, SO:0001183
 bag.example.identifiers.snrna=AT3G56825.1, AT1G61275.1, AT5G46315.1
 bag.example.identifiers.snorna=AT1G03502.1, AT2G17295.1, AT4G26365.1
@@ -186,8 +189,6 @@ bag.example.identifiers.transposableelement=AT1TE00010, AT5TE93070, AT5TE75125
 bag.example.identifiers.transposableelementgene=AT1G33570, AT1G35060, AT5G59640
 bag.example.identifiers.transposonfragment=AT1TE00010:transposon_fragment:1, AT1TE00025:transposon_fragment:2, AT1TE03180:transposon_fragment:1
 bag.example.identifiers.utr=AT2G45250:three_prime_UTR:1,AT2G45250:three_prime_UTR:3, AT3G10270:five_prime_UTR:1, AT5G50012:five_prime_UTR:2
-
-
 
 
 # list upload box
