uncomment head.cdn.location in web.properties

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -274,8 +274,7 @@ genomicRegionSearch.liftOver.url =
 genomicRegionSearch.exportChromosomeSegment = true
 
 # set CDN to araport
-#tmp rm until they update
-#head.cdn.location = https://cdn.araport.org
+head.cdn.location = https://cdn.araport.org
 
 head.cdn.location = https://cdn.araport.org
 
