Minor changes to protein and phytozome homolog displayers with an updated to the headers

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -278,7 +278,7 @@ genomicRegionSearch.exportChromosomeSegment = true
 #head.cdn.location = https://cdn.araport.org
 
 head.cdn.location = https://cdn.araport.org
-head.js.results.RESULT_TABLES = CDN/js/intermine/im-tables/1.7.x/imtables-bundled.js
+head.js.results.RESULT_TABLES = http://msarmienvm-lx.jcvi.org:8080/thalemine/js/imtables-mini-bundle.js
 
 # load custom JS file
 head.js.all.MY_JS_OPTIONS = thalemine-options.js
@@ -333,3 +333,9 @@ xreflink.BioGRID.url=http://thebiogrid.org/<<attributeValue>>
 
 #inline.collections.in.tables = true
 
+# phytomine
+phytomine.homolog.prefix = https://api.araport.org/data/phytozome_intermine/v1.0.0
+phytomine_url = http://phytozome.jgi.doe.gov/phytomine
+
+# UniProt Direct link
+Uniprot_url = http://www.uniprot.org
