moved jwt/keystore configuration into thalemine's web.properties (minus public key)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -337,3 +337,10 @@ phytomine_url = http://phytozome.jgi.doe.gov/phytomine
 
 # UniProt Direct link
 Uniprot_url = http://www.uniprot.org
+
+# jwt/keystore configuration
+security.keystore.alias.wso2.org/products/am=araport
+jwt.key.sub.wso2.org/products/am=http://wso2.org/claims/subscriber
+jwt.verification.strategy=ANY
+authentication.identity.assertion.header=X-Jwt-Assertion-Araport-Org
+
