adds explainatory messages in QB (MINEx-440)

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -137,7 +137,8 @@ query.noFollow = true
 query.currentclass = Model browser
 query.currentclass.detail = Browse through the classes and attributes. Click on <img border=0 src=images/show-ref.gif alt=show /> links to \
 add summary of fields to the results table or on <img border=0 src=images/show.gif alt=show /> links to add individual \
-fields to the results. Use <img border=0 src=images/constrain.gif alt=constrain /> links to constrain a value in the query.
+fields to the results. Use <img border=0 src=images/constrain.gif alt=constrain /> links to constrain a value in the query. \
+You can click on constrain multiple times and edit the constraint logic in the right column if necessary.
 query.currentquery = Query Overview
 query.currentquery.detail = Click on a class name below to view its fields
 query.empty = no fields constrained
@@ -169,7 +170,7 @@ query.constraint.null = Has no value
 query.constraint.notnull = Has a value
 query.emptyCollHelp = This collection is disabled because all {1} collections on objects of type {0} are empty
 query.nullRefHelp = This reference is disabled because all {1} references on objects of type {0} are null
-query.constraintLogic = Constraint logic
+query.constraintLogic = Constraint logic (If you add more than one constraint, you can edit the constraint logic using the box, e.g. A or B, A and B)
 query.logicUpdate = Update
 query.oneConstraint = one constraint
 query.noConstraints = no constraints
