+ Fix list sharing URL in email template to work with OAuth2 login flow   Override email template by copying to thalemine/webapp/resources/web.properties

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -344,3 +344,21 @@ jwt.key.sub.wso2.org/products/am=http://wso2.org/claims/subscriber
 jwt.verification.strategy=ANY
 authentication.identity.assertion.header=X-Jwt-Assertion-Araport-Org
 
+# list sharing email template
+mail.regarding.newly.shared.body = Dear %1$s user,\n\
+\n\
+One of our users (%2$s) has just shared one of their %3$s lists with you. The list contains\n\
+%4$d items, and is called "%5$s". Click on the link below to view this list in a browser:\n\
+     %6$s/%7$s/oauth2authenticator.do?provider=ARAPORT%%26returnto=%%2FbagDetails.do%%3FbagName%%3D%8$s\n\
+\n\
+You cannot delete or modify this list directly, as it does not belong to you, although\n\
+you may remove it from your account by using the 'delete' function on the lists tab.\n\
+You are welcome to COPY this list to create your own version, which will remain in your\n\
+possession even if the owner of "%5$s" deletes or modifies the original.\n\
+\n\
+If you have any problems or questions, please don't hesitate to contact us. We can be reached\n\
+by replying to this email or by using the links found at the bottom of each page on %1$s.\n\
+\n\
+Best wishes,\n\
+\n\
+The %1$s team.
