--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -27,72 +27,94 @@ attributelink.interpro.ProteinDomain.*.primaryIdentifier.url=http://www.ebi.ac.u
 attributelink.interpro.ProteinDomain.*.primaryIdentifier.text=InterPro: <<attributeValue>>
 
 attributelink.Ace.Gene.*.primaryIdentifier.url=http://www.ncbi.nlm.nih.gov/IEB/Research/Acembly/av.cgi?db=ara&term=<<attributeValue>>&submit=Go
+attributelink.Ace.Gene.*.primaryIdentifier.title=curated, comprehensive and non-redundant representation of all public mRNA sequences
 attributelink.Ace.Gene.*.primaryIdentifier.text=AceView
 
-attributelink.Aracyc.Gene.*.primaryIdentifier.text=Aracyc
 attributelink.Aracyc.Gene.*.primaryIdentifier.url=http://pmn.plantcyc.org/ARA/substring-search?type=NIL&object=<<attributeValue>>
+attributelink.Aracyc.Gene.*.primaryIdentifier.title=biochemical pathway, catalytic enzyme, and compound information
+attributelink.Aracyc.Gene.*.primaryIdentifier.text=Aracyc
 
-attributelink.Aramemnon.Gene.*.primaryIdentifier.text=Aramemnon
 attributelink.Aramemnon.Gene.*.primaryIdentifier.url=http://aramemnon.botanik.uni-koeln.de/seq_view.ep?search=<<attributeValue>>
+attributelink.Aramemnon.Gene.*.primaryIdentifier.title=protein description, topology prediction, and relationships to homologous proteins of nine plant species
+attributelink.Aramemnon.Gene.*.primaryIdentifier.text=Aramemnon
 
-attributelink.AtcisDB.Gene.*.primaryIdentifier.text=AtcisDB
 attributelink.AtcisDB.Gene.*.primaryIdentifier.url=http://arabidopsis.med.ohio-state.edu/AtcisDB/atcisview.html?id=<<attributeValue>>
+attributelink.AtcisDB.Gene.*.primaryIdentifier.title=binding sites information
+attributelink.AtcisDB.Gene.*.primaryIdentifier.text=AtcisDB
 
-attributelink.AtGDB.Gene.*.primaryIdentifier.text=AtGDB
 attributelink.AtGDB.Gene.*.primaryIdentifier.url=http://www.plantgdb.org/AtGDB-cgi/findRegion.pl?id=<<attributeValue>>
+#attributelink.AtGDB.Gene.*.primaryIdentifier.title=
+attributelink.AtGDB.Gene.*.primaryIdentifier.text=AtGDB
 
-attributelink.AthaMap.Gene.*.primaryIdentifier.text=AthaMap
 attributelink.AthaMap.Gene.*.primaryIdentifier.url=http://www.athamap.de/search.php?accNo=<<attributeValue>>
+attributelink.AthaMap.Gene.*.primaryIdentifier.title=genome-wide map of potential transcription factor and small RNA binding sites
+attributelink.AthaMap.Gene.*.primaryIdentifier.text=AthaMap
 
 attributelink.AtGenExpress.Gene.*.primaryIdentifier.url=http://jsp.weigelworld.org/expviz/expviz.jsp?experiment=development&normalization=absolute&probesetcsv=<<attributeValue>>&action=Run
+attributelink.AtGenExpress.Gene.*.primaryIdentifier.title=microarray data for samples at various development stage or stresses
 attributelink.AtGenExpress.Gene.*.primaryIdentifier.text=AtGenExpress
 
 attributelink.ATTED.Gene.*.primaryIdentifier.url=http://atted.jp/data/locus/<<attributeValue>>.shtml
+attributelink.ATTED.Gene.*.primaryIdentifier.title=gene coexpression database
 attributelink.ATTED.Gene.*.primaryIdentifier.text=ATTED-II
 
 #attributelink.MIPS.Gene.*.primaryIdentifier.url=http://mips.helmholtz-muenchen.de/plant/athal/searchjsp/searchforge.jsp?searchText=<<attributeValue>>
 #attributelink.MIPS.Gene.*.primaryIdentifier.text=MIPS
 
-attributelink.MPSS.Gene.*.primaryIdentifier.url=http://mpss.udel.edu/common/web/GeneAnalysis.php?SITE=at_sRNA&featureName=<<attributeValue>>
-attributelink.MPSS.Gene.*.primaryIdentifier.text=MPSS
+#attributelink.MPSS.Gene.*.primaryIdentifier.url=http://mpss.udel.edu/common/web/GeneAnalysis.php?SITE=at_sRNA&featureName=<<attributeValue>>
+#attributelink.MPSS.Gene.*.primaryIdentifier.title=small RNA information
+#attributelink.MPSS.Gene.*.primaryIdentifier.text=MPSS
 
 attributelink.EnsemblPlants.Gene.*.primaryIdentifier.url=http://plants.ensembl.org/Arabidopsis_thaliana/Gene/Summary?g=<<attributeValue>>
+attributelink.EnsemblPlants.Gene.*.primaryIdentifier.title=genomic resources, databases, visualizing and analytic tools for crops and model plants
 attributelink.EnsemblPlants.Gene.*.primaryIdentifier.text=EnsemblPlants
 
 attributelink.Entrez.Gene.*.primaryIdentifier.url=http://www.ncbi.nlm.nih.gov/gene/?term=<<attributeValue>>[sym]
 attributelink.Entrez.Gene.*.primaryIdentifier.text=NCBI-Entrez
+attributelink.Entrez.Gene.*.primaryIdentifier.title=nomenclature, Reference Sequences (RefSeqs), maps, pathways, variations, phenotypes
 
 attributelink.Gramene.Gene.*.primaryIdentifier.url=http://tools.gramene.org/search?query=<<attributeValue>>&fq=species~Arabidopsis_thaliana
+attributelink.Gramene.Gene.*.primaryIdentifier.title=curated and integrated data resource for comparative functional genomics
 attributelink.Gramene.Gene.*.primaryIdentifier.text=Gramene
 
 attributelink.pep2pro.Gene.*.primaryIdentifier.url=http://fgcz-pep2pro.uzh.ch/locus.php?<<attributeValue>>
+attributelink.pep2pro.Gene.*.primaryIdentifier.title=proteome information from large datasets
 attributelink.pep2pro.Gene.*.primaryIdentifier.text=pep2pro
 
 attributelink.PGDD.Gene.*.primaryIdentifier.url=http://chibba.agtec.uga.edu/duplication/index/locus_app?lc=<<attributeValue>>
+attributelink.PGDD.Gene.*.primaryIdentifier.title=database to identify and catalog plant genes in terms of intragenome or cross-genome syntenic relationships
 attributelink.PGDD.Gene.*.primaryIdentifier.text=PGDD
 
 attributelink.Phytozome.Gene.*.primaryIdentifier.url=http://phytozome.jgi.doe.gov/pz/portal.html#!gene?organism=Athaliana&searchText=locusName:<<attributeValue>>
+attributelink.Phytozome.Gene.*.primaryIdentifier.title=comparative genomic amongst green plants
 attributelink.Phytozome.Gene.*.primaryIdentifier.text=Phytozome
 
 attributelink.PIR.Gene.*.primaryIdentifier.url=http://pir.georgetown.edu/cgi-bin/textsearch.pl?query0=<<attributeValue>>&field0=GENENAME_TXT&search=1
+attributelink.PIR.Gene.*.primaryIdentifier.title=genomic, proteomic and systems biology
 attributelink.PIR.Gene.*.primaryIdentifier.text=PIR
 
 attributelink.PPD.Gene.*.primaryIdentifier.url=http://ppdb.tc.cornell.edu/gene.aspx?acc=<<attributeValue>>
+attributelink.PPD.Gene.*.primaryIdentifier.title=curated information about protein function, protein properties and subcellular localization
 attributelink.PPD.Gene.*.primaryIdentifier.text=Plant Proteome Database
 
 attributelink.Plaza.Gene.*.primaryIdentifier.url=http://bioinformatics.psb.ugent.be/plaza/genes/view/<<attributeValue>>
 attributelink.Plaza.Gene.*.primaryIdentifier.text=Plaza
+attributelink.Plaza.Gene.*.primaryIdentifier.title=plant comparative genomics
 
 attributelink.SUBA.Gene.*.primaryIdentifier.url=http://www.plantenergy.uwa.edu.au/applications/suba2/flatfile.php?id=<<attributeValue>>
+attributelink.SUBA.Gene.*.primaryIdentifier.title=large scale proteomic and GFP localization sets from cellular compartments
 attributelink.SUBA.Gene.*.primaryIdentifier.text=SUBA
 
-attributelink.Salk.Gene.*.primaryIdentifier.url=http://natural.salk.edu/cgi-bin/snp.cgi?QUERY=<<attributeValue>>
-attributelink.Salk.Gene.*.primaryIdentifier.text=Salk SNP Viewer
+#attributelink.Salk.Gene.*.primaryIdentifier.url=http://natural.salk.edu/cgi-bin/snp.cgi?QUERY=<<attributeValue>>
+#attributelink.Salk.Gene.*.primaryIdentifier.title=
+#attributelink.Salk.Gene.*.primaryIdentifier.text=Salk SNP Viewer
 
 attributelink.TDNAe.Gene.*.primaryIdentifier.url=http://signal.salk.edu/cgi-bin/tdnaexpress?gene=<<attributeValue>>
+attributelink.TDNAe.Gene.*.primaryIdentifier.title=information of T-DNA lines, cDNA, EST clones, and more
 attributelink.TDNAe.Gene.*.primaryIdentifier.text=T-DNA Express
 
 attributelink.TAIR.Gene.*.primaryIdentifier.url=http://www.arabidopsis.org/servlets/TairObject?name=<<attributeValue>>&type=locus
+attributelink.TAIR.Gene.*.primaryIdentifier.title=genetic and molecular biology data
 attributelink.TAIR.Gene.*.primaryIdentifier.text=TAIR
 
 #attributelink.UniGene.Gene.*.primaryIdentifier.url=http://www.metalife.com/SearchSummary.aspx?query=<<attributeValue>>&db=UniGene
