adds AtGDB title (MINE-443)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -43,7 +43,7 @@ attributelink.AtcisDB.Gene.*.primaryIdentifier.title=binding sites information
 attributelink.AtcisDB.Gene.*.primaryIdentifier.text=AtcisDB
 
 attributelink.AtGDB.Gene.*.primaryIdentifier.url=http://www.plantgdb.org/AtGDB-cgi/findRegion.pl?id=<<attributeValue>>
-#attributelink.AtGDB.Gene.*.primaryIdentifier.title=
+attributelink.AtGDB.Gene.*.primaryIdentifier.title=sequence data and custom EST assemblies in a genome browser
 attributelink.AtGDB.Gene.*.primaryIdentifier.text=AtGDB
 
 attributelink.AthaMap.Gene.*.primaryIdentifier.url=http://www.athamap.de/search.php?accNo=<<attributeValue>>
