--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -61,9 +61,9 @@ attributelink.ATTED.Gene.*.primaryIdentifier.text=ATTED-II
 #attributelink.MIPS.Gene.*.primaryIdentifier.url=http://mips.helmholtz-muenchen.de/plant/athal/searchjsp/searchforge.jsp?searchText=<<attributeValue>>
 #attributelink.MIPS.Gene.*.primaryIdentifier.text=MIPS
 
-#attributelink.MPSS.Gene.*.primaryIdentifier.url=http://mpss.udel.edu/common/web/GeneAnalysis.php?SITE=at_sRNA&featureName=<<attributeValue>>
-#attributelink.MPSS.Gene.*.primaryIdentifier.title=small RNA information
-#attributelink.MPSS.Gene.*.primaryIdentifier.text=MPSS
+attributelink.MPSS.Gene.*.primaryIdentifier.url=https://mpss.udel.edu/web/php/pages/GeneAnalysis.php?SITE=at_sRNA&featureName=<<attributeValue>>
+attributelink.MPSS.Gene.*.primaryIdentifier.title=small RNA information
+attributelink.MPSS.Gene.*.primaryIdentifier.text=MPSS
 
 attributelink.EnsemblPlants.Gene.*.primaryIdentifier.url=http://plants.ensembl.org/Arabidopsis_thaliana/Gene/Summary?g=<<attributeValue>>
 attributelink.EnsemblPlants.Gene.*.primaryIdentifier.title=genomic resources, databases, visualizing and analytic tools for crops and model plants
