--- a/thalemine/dbmodel/resources/keyword_search.properties
+++ b/thalemine/dbmodel/resources/keyword_search.properties
@@ -1,5 +1,5 @@
-#index.temp.directory = /opt/www/araport/tmp
-index.temp.directory = /tmp
+index.temp.directory = /opt/www/araport/tmp
+#index.temp.directory = /tmp
 index.references.BioEntity = synonyms organism crossReferences
 index.references.OntologyTerm = synonyms
 #index.references.MRNA = gene
