updates entrez record to preserve order (MINE-443)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -69,9 +69,9 @@ attributelink.EnsemblPlants.Gene.*.primaryIdentifier.url=http://plants.ensembl.o
 attributelink.EnsemblPlants.Gene.*.primaryIdentifier.title=genomic resources, databases, visualizing and analytic tools for crops and model plants
 attributelink.EnsemblPlants.Gene.*.primaryIdentifier.text=EnsemblPlants
 
-attributelink.Entrez.Gene.*.primaryIdentifier.url=http://www.ncbi.nlm.nih.gov/gene/?term=<<attributeValue>>[sym]
-attributelink.Entrez.Gene.*.primaryIdentifier.text=NCBI-Entrez
-attributelink.Entrez.Gene.*.primaryIdentifier.title=nomenclature, Reference Sequences (RefSeqs), maps, pathways, variations, phenotypes
+attributelink.NCBIEntrez.Gene.*.primaryIdentifier.url=http://www.ncbi.nlm.nih.gov/gene/?term=<<attributeValue>>[sym]
+attributelink.NCBIEntrez.Gene.*.primaryIdentifier.text=NCBI-Entrez
+attributelink.NCBIEntrez.Gene.*.primaryIdentifier.title=nomenclature, Reference Sequences (RefSeqs), maps, pathways, variations, phenotypes
 
 attributelink.Gramene.Gene.*.primaryIdentifier.url=http://tools.gramene.org/search?query=<<attributeValue>>&fq=species~Arabidopsis_thaliana
 attributelink.Gramene.Gene.*.primaryIdentifier.title=curated and integrated data resource for comparative functional genomics
