Add data source to displayers

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -357,6 +357,9 @@ xreflink.BioGRID.url=http://thebiogrid.org/<<attributeValue>>
 # phytomine
 phytomine.homolog.prefix = https://api.araport.org/data/phytozome_intermine/v1.0.0
 
+#Panther Direct Link
+Panther_url = http://pantherdb.org
+
 # UniProt Direct link
 Uniprot_url = http://www.uniprot.org
 
